# aliyun-tablestore-python-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER_GUIDE.md  protoc.sh  pyproject.toml
examples/: search_index.py
tablestore/: __init__.py  client.py  connection.py  decoder.py  encoder.py  metadata.py  protocol.py  retry.py  types.py
tablestore/ots_sdk/: README.md  __init__.py
tablestore/protobuf/: global_table.proto  global_table_pb2.py  search.proto  search_pb2.py  table_store.proto  table_store_pb2.py
tests/: __init__.py  agg_test.py  async_test.py  auth_unittest.py  client_unittest.py  decoder_unittest.py  filter_and_condition_update_test.py  full_text_search_test.py  global_table_test.py  group_by_test.py  metadata_unittest.py  native_class_stability_unittest.py  native_encoder_decoder_unittest.py  native_extension_test.py  ots_sdk_init_test.py  ots_sdk_test.py  parallel_scan_test.py  row_op_test.py  sdk_param_test.py  search_index_test.py  sql_query_test.py  stress_test.py  stress_unittest.py  table_operation_test.py  test_utils.py  timeseries_api_test.py  timeseries_meta_condition_test.py  transaction_test.py
tests/lib/: api_test_base.py  mock_connection.py  test_config.py
