[tool.poetry]
name = "tablestore"
version = "6.4.2"
description = "Aliyun TableStore(OTS) SDK"
readme = "README.md"
license = "Apache License 2.0"
homepage = "https://www.aliyun.com/product/ots"
authors = ["xunjian.sl <xunjian.sl@alibaba-inc.com>"]
packages = [
    { include = "tablestore"},
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = ">=3.20.0, <6.0.0"
urllib3 = ">=1.14"
certifi = ">=2016.2.28"
future = ">=0.16.0"
six = ">=1.11.0"
flatbuffers = ">=22.9.24"
numpy = ">=1.11.0"
crc32c = ">=2.7.1"
aiohttp = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["*_test.py", "*_unittest.py"]
log_cli = true
log_cli_level = "WARNING"

[tool.coverage.run]
omit = [
    "tests/*",
    "tablestore/protobuf/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"